# ol-timesheet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  check.ps1  instructions.md  oltimesheet.ps1  oltimesheet.sh
.github/: copilot-instructions.md
public/: report.css
src/: app.rs  auth.rs  cache.rs  connection.rs  flags.rs  formatting.rs  i18n.rs  lib.rs  main.rs  model.rs
src/api/: bitbucket.rs  cache.rs  git.rs  jenkins.rs  jira.rs  mod.rs  periodic_refresh.rs  report.rs  webhook.rs
src/components/: cell_popup.rs  folder_field.rs  mod.rs  password_field.rs  popup_flush.rs  report_overlay.rs  settings_dialog.rs  settings_group.rs  timer.rs  timesheet_view.rs  week_navigator.rs
stories/: assigned tickets.md  better focus and keyboard.md  heartbeat.md  improve caching.md  periodic_refresh.md  time tracking.md  timer_progress.md  user report.md
stories/oauth2/: integration_plan.md
style/: timesheet.css
